[package]
name = "sentinel"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
sysinfo = "0.30"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Disable default features (which include OpenSSL) and explicitly use rustls
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
libc = "0.2.186"
